--- a/ui/html/pages/home.tmpl
+++ b/ui/html/pages/home.tmpl
@@ -2,7 +2,7 @@
 
 {{define "main"}}
     {{if .IsAuthenticated}}
-        <button type="button">Create room</button>
+        <button type="button" id="createRoomButton">Create room</button>
         <button type="button">Join room</button>
     {{else}}
         <button type="button" id="loginButton">Log in</button>
